# 2C-Compressor

./: .gitignore  CMakeLists.txt  README.md
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: CompressorDSP.h  MeterBallistics.h  Saturation.h
Source/UI/: MeterComponent.cpp  MeterComponent.h
scripts/: BuildandInstall.ps1  run_harness.ps1
tests/: run_all.ps1
tools/: transfer_curve_test.py
tools/vst3_harness/: CMakeLists.txt
tools/vst3_harness/src/: main.cpp
